@startuml
'https://plantuml.com/class-diagram

interface CostStrategy {

+getCost(ShipmentOption) : ShipmentCost

}

class MonetaryCostStrategy {

 -LABOR_COST = BigDecimal
 -materialCostPerGram : Map<Material, BigDecimal>
 +MonetaryCostStrategy()
 +getCost(ShipmentOption) : ShipmentCost

}

class CarbonCostStrategy {

 -materialCostPerGram : Map<Material, BigDecimal>
 +CarbonCostStrategy()
+getCost(ShipmentOption) : ShipmentCost

}

class WeightedCostStrategy {

+getCost(ShipmentOption) : ShipmentCost

}

enum Material {

+ CORRUGATE
+ LAMINATED_PLASTIC

}

MonetaryCostStrategy ..|> CostStrategy
CarbonCostStrategy ..|> CostStrategy
WeightedCostStrategy ..|> CostStrategy
WeightedCostStrategy --> MonetaryCostStrategy
WeightedCostStrategy --> CarbonCostStrategy


@enduml